# isu_coms327_rlg

./: .gitignore  CHANGELOG  CMakeLists.txt  Makefile  README  cell.c  cell.h  level.c  level.h  main.cpp  main.h  rlg  room.c  room.h  rouge.c  rouge.h  test.c  utils.c  utils.h
src/: cell.c  cell.cpp  cell.h  character.c  character.cpp  character.h  coordinate.c  coordinate.cpp  coordinate.h  dungeon.c  dungeon.cpp  dungeon.h  room.c  room.cpp  room.h  state.c  state.cpp  state.h
src/config/: color.h  config.h
src/game/: cell.cpp  character.cpp  coordinate.cpp  dungeon.cpp  item.cpp  item_template.cpp  npc_template.cpp  room.cpp  state.cpp
src/game/classdef/: cell.h  character.h  coordinate.h  dungeon.h  item.h  item_template.h  npc_template.h  room.h  state.h
src/game/utils/: cell_io_disk.cpp  character_io_disk.cpp  character_movement.cpp  dice.cpp  dungeon_io_disk.cpp  fibheap.c  fibheap.cpp  item_io_disk.cpp  movement.cpp  movement.h  parse_io.cpp  pathfinder.cpp  pathfinder.h  queue.cpp  room_io_disk.cpp  state_draw.cpp  state_io_disk.cpp  state_io_terminal.cpp
src/game/utils/classdef/: dice.h  fibheap.h  queue.h
src/res/: color.h  config.h
src/utils/: config.h  file_utils.c  file_utils.cpp  file_utils.h  math_utils.c  math_utils.cpp  math_utils.h  movement.c  movement.cpp  movement.h  pathfinder.c  pathfinder.h  queue.c  queue.cpp  queue.h  sound_utils.cpp  sound_utils.h  str_utils.cpp  str_utils.h
templates/: item_desc.txt  monster_desc.txt  npc_desc.txt
tmp/: rlg327  rlg_disk  rlg_disk.txt  save_load_info.txt  test_save.rlgcustom
